2013-07-31  Dmitry Antipov  <dmantipov@yandex.ru>

	* frame.c (make_frame, x_set_frame_parameters): Use bool for boolean.
	(x_figure_window_size): Likewise.  Adjust to return long.
	(syms_of_frame): Do not DEFSYM Qterminal_live_p.
	(toplevel): Move Qterminal_live_p to...
	* terminal.c (toplevel): ...here, make it static, and...
	(syms_of_terminal): ...DEFSYM here.
	* frame.h (Qterminal_live_p): Remove declaration.
	(make_frame, x_figure_window_size): Adjust prototype.
	* nsfns.m (Fx_create_frame): Use long for window flags.

2013-07-30  Paul Eggert  <eggert@cs.ucla.edu>

	Fix tempfile bug on platforms lacking mkostemp and mkstemp (Bug#14986).
	* callproc.c (create_temp_file) [! (HAVE_MKOSTEMP || HAVE_MKSTEMP)]:
	Do not assume that emacs_close (INT_MAX) is a no-op.

2013-07-30  Dmitry Antipov  <dmantipov@yandex.ru>

	* xfaces.c (make_face_cache): For struct face_cache, prefer
	xmalloc to xzalloc and so avoid redundant call to memset.
	(Finternal_set_lisp_face_attribute): Fix comment typo and style.

2013-07-30  Dmitry Antipov  <dmantipov@yandex.ru>

	* fringe.c (draw_window_fringes, update_window_fringes)
	(compute_fringe_widths):
	* w32term.c (x_draw_glyph_string):
	* window.c (candidate_window_p, Frecenter):
	* xfaces.c (realize_basic_faces, realize_default_face)
	(Fbitmap_space_p, Finternal_set_lisp_face_attribute)
	(x_update_menu_appearance, face_attr_equal_p, lface_equal_p):
	* xfns.c (x_set_cursor_color, xic_free_xfontset):
	* xmenu.c (Fx_menu_bar_open_internal):
	* xselect.c (x_reply_selection_request, Fx_get_atom_name):
	* xsettings.c (xft_settings_event):
	* xterm.c (x_draw_glyph_string, x_had_errors_p):
	Use bool for booleans.  Adjust style and comments where
	appropriate.
	* dispextern.h (draw_window_fringes, update_window_fringes)
	(compute_fringe_widths):
	* xterm.h (x_had_errors_p): Adjust prototype.

2013-07-30  Dmitry Antipov  <dmantipov@yandex.ru>

	* frame.c (Fmodify_frame_parameters): Always check 2nd arg with